--- a/GUI/GUI.html
+++ b/GUI/GUI.html
@@ -7,18 +7,21 @@
     <title>Book Shop</title>
     <link rel="stylesheet" href="GUI.css">
     <script src="GUI.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <img src="" alt=""/>
-    <h2>Book Shop</h2>
-    <h5 id="book_name"></h5>
-    <p id="author"></p>
-    <p id="description"></p>
-    <span id="Book_pic"></span>
+  <div class="page_header">
+    <img src="/images/download (1).jpeg" id="user_pic" alt=""/>
+    <h2 class="page_logo">The Book Shop <img src="/images/36080284.jpg" id="logo" alt=""></h2>
+    <section>
+    <div class="search-box">
+      <input class="search_in" type="text" placeholder="search...">
+      <i class="material-icons">search</i>
+    </div>
+  </section>
+  </div>
 </body>
 </html>
