--- a/GUI/GUI.html
+++ b/GUI/GUI.html
@@ -1,27 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Shop</title>
+
+
+    <!-- bootstrap link-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet">
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--  JQUERY link-->
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- google icons-->
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- css link -->
     <link rel="stylesheet" href="GUI.css">
+
+    <!-- javascript link-->
     <script src="GUI.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-</head>
-<body>
-  <div class="page_header">
-    <img src="/images/download (1).jpeg" id="user_pic" alt=""/>
-    <h2 class="page_logo">The Book Shop <img src="/images/36080284.jpg" id="logo" alt=""></h2>
-    <section>
-    <div class="search-box">
-      <input class="search_in" type="text" placeholder="search...">
-      <i class="material-icons">search</i>
+  </head>
+  <body>
+
+    <div class="page_header">
+      <img src="/images/download (1).jpeg" id="user_pic" alt=""/>
+
+      <h1 class="page_logo">The Book Shop<img
+          src="/images/icons8-knowledge-sharing-80.png" id="logo" alt=""></<h1></h1>
+      <section class="search-sec">
+        <div class="search-box">
+          <input class="search_in" type="text" placeholder="search...">
+          <i class="material-icons">search</i>
+        </div>
+      </section>
     </div>
-  </section>
-  </div>
-</body>
-</html>
+
+    <div class="content">
+      <div class="card" id="card0">
+        <div class="card-content" id="book0">
+        </div>
+        <div id="modal0">
+
+        </div>
+      </div>
+      <div class="card" id="card1">
+        <div class="card-content" id="book1"></div>
+        <div id="modal1">
+
+        </div>
+      </div>
+      <div class="card" id="card2">
+        <div class="card-content" id="book2"></div>
+        <div id="modal2">
+
+        </div>
+      </div>
+      <div class="card" id="card3">
+        <div class="card-content" id="book3"></div>
+        <div id="modal3">
+
+        </div>
+      </div>
+      <div class="card" id="card4">
+        <div class="card-content" id="book4"></div>
+        <div id="modal4">
+
+        </div>
+      </div>
+      <div class="card" id="card5">
+        <div class="card-content" id="book5"></div>
+        <div id="modal5">
+
+        </div>
+      </div>
+      <div class="card" id="card6">
+        <div class="card-content" id="book6"></div>
+        <div id="modal6">
+
+        </div>
+      </div>
+      <div class="card" id="card7">
+        <div class="card-content" id="book7"></div>
+        <div id="modal7">
+
+        </div>
+      </div>
+      <div class="card" id="card8">
+        <div class="card-content" id="book8"></div>
+        <div id="modal8">
+
+        </div>
+      </div>
+      <div class="card" id="card9">
+        <div class="card-content" id="book9"></div>
+        <div id="modal9">
+
+        </div>
+      </div>
+      <div class="card" id="card10">
+        <div class="card-content" id="book10"></div>
+        <div id="modal10">
+
+        </div>
+      </div>
+      <div class="card" id="card11">
+        <div class="card-content" id="book11"></div>
+        <div id="modal11">
+
+        </div>
+      </div>
+    </div>
+
+    </body>
+  </html>
