--- a/addbooks/addbooks.html
+++ b/addbooks/addbooks.html
@@ -46,10 +46,13 @@
         <table id="add_books" class="table table-bordered xyz">
 
             <tr>
-                <th>#</th>
-                <th>Book Name:</th>
-                <th>author:</th>
-                <th>Publish Year:</th>
+                <thead>
+                    <th>#</th>
+                    <th>image:</th>
+                    <th>Book Name:</th>
+                    <th>author:</th>
+                    <th>Publish Year:</th>
+                </thead>
             </tr>
 
         </table>
